--- a/ML Model.ipynb
+++ b/ML Model.ipynb
@@ -2,22 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "//anaconda/lib/python2.7/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xgboost as xgb\n",
     "import sklearn\n",
-    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.externals import joblib\n",
     "from sklearn.linear_model import LassoCV\n",
-    "from sklearn.naive_bayes import BernoulliNB\n",
     "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "%matplotlib inline"
@@ -47,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "//anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2902: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "//anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     }
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -133,38 +145,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  36 out of  36 | elapsed:   25.7s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.967619047619\n",
+      "{'n_estimators': 100, 'max_depth': 6}\n"
+     ]
+    }
+   ],
    "source": [
-    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
-    "dvalid  = xgb.DMatrix(X_valid, label=y_valid)\n",
-    "dtest  = xgb.DMatrix(X_test, label=y_test)"
+    "xgbmodel = GridSearchCV(xgb.XGBClassifier(),\n",
+    "                   {'max_depth': [1, 2, 4, 6],\n",
+    "                    'n_estimators': [10, 50, 100]}, verbose=1)\n",
+    "xgbmodel.fit(X_train, y_train)\n",
+    "print(xgbmodel.best_score_)\n",
+    "print(xgbmodel.best_params_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "param = {'max_depth':2, 'eta': 1, 'silent':1, 'objective':'binary:logistic'}\n",
-    "model = xgb.train(param, dtrain, num_boost_round=10)\n",
+    "xgbpred = xgbmodel.predict(X_train)\n",
+    "xgbproba = 1/ (1. + np.exp( - xgbmodel.predict(X_train) ))\n",
     "\n",
-    "xgbpred = model.predict(dtrain)\n",
-    "xgbproba = 1/ (1. + np.exp( - model.predict(dtrain) ))\n",
-    "\n",
-    "xgbpredvalid = model.predict(dvalid)\n",
-    "xgbprobavalid = 1/ (1. + np.exp( - model.predict(dvalid) ))"
+    "xgbpredvalid = xgbmodel.predict(X_valid)\n",
+    "xgbprobavalid = 1/ (1. + np.exp( - xgbmodel.predict(X_valid) ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +214,7 @@
        "    verbose=False)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +252,7 @@
        "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -236,6 +272,7 @@
    "source": [
     "nbclass = nbmodel.predict(X_train)  \n",
     "nbclassvalid = nbmodel.predict(X_valid)\n",
+    "nbclasstest = nbmodel.predict(X_test)\n",
     "\n",
     "nbproba = nbmodel.predict_proba(X_train)[:,1]\n",
     "nbprobavalid = nbmodel.predict_proba(X_valid)[:,1]\n",
@@ -244,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -253,12 +290,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train LASSO Logistic AUC = 0.883916\n",
-      "Valid LASSO Logistic AUC = 0.889502\n",
-      "Train XGBoost AUC = 0.978075\n",
-      "Valid XGBoost AUC = 0.966410\n",
-      "Train Naive Bayes AUC = 0.968103\n",
-      "Valid Naive Bayes AUC = 0.959572\n"
+      "Train LASSO Logistic AUC = 0.891316\n",
+      "Valid LASSO Logistic AUC = 0.862454\n",
+      "Train XGBoost AUC = 0.964184\n",
+      "Valid XGBoost AUC = 0.924961\n",
+      "Train Naive Bayes AUC = 0.968006\n",
+      "Valid Naive Bayes AUC = 0.943938\n"
      ]
     }
    ],
@@ -275,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -285,11 +322,11 @@
      "output_type": "stream",
      "text": [
       "Training Confusion Matrix\n",
-      "[[930   0]\n",
-      " [ 52 103]]\n",
+      "[[894   0]\n",
+      " [ 53 103]]\n",
       "Validation Confusion Matrix\n",
-      "[[926   2]\n",
-      " [ 45  98]]\n"
+      "[[929   3]\n",
+      " [ 56 102]]\n"
      ]
     }
    ],
@@ -303,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -313,11 +350,11 @@
      "output_type": "stream",
      "text": [
       "Training Confusion Matrix\n",
-      "[[220 710]\n",
-      " [  2 153]]\n",
+      "[[202 692]\n",
+      " [  3 153]]\n",
       "Validation Confusion Matrix\n",
-      "[[207 721]\n",
-      " [  4 139]]\n"
+      "[[212 720]\n",
+      " [  6 152]]\n"
      ]
     }
    ],
@@ -331,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -341,11 +378,11 @@
      "output_type": "stream",
      "text": [
       "Training Confusion Matrix\n",
-      "[[  0 930]\n",
-      " [  0 155]]\n",
+      "[[  0 894]\n",
+      " [  0 156]]\n",
       "Validation Confusion Matrix\n",
-      "[[  0 928]\n",
-      " [  0 143]]\n"
+      "[[  0 932]\n",
+      " [  0 158]]\n"
      ]
     }
    ],
@@ -359,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -368,14 +405,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Naive Bayes AUC = 0.968103\n",
-      "Valid Naive Bayes AUC = 0.959572\n",
-      "Test Naive Bayes AUC = 0.947379\n"
+      "Train Naive Bayes AUC = 0.968006\n",
+      "Valid Naive Bayes AUC = 0.943938\n",
+      "Test Naive Bayes AUC = 0.949292\n"
      ]
     }
    ],
    "source": [
-    "# Choosing the model with the best performance on the validation data\n",
+    "# Choosing the model with the best performance on the validation data, which happens to be the Naive Bayes\n",
     "\n",
     "print(\"Train Naive Bayes AUC = %.6f\" % roc_auc_score(y_train, nbproba))\n",
     "print(\"Valid Naive Bayes AUC = %.6f\" % roc_auc_score(y_valid, nbprobavalid))\n",
@@ -384,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -394,14 +431,14 @@
      "output_type": "stream",
      "text": [
       "Training Confusion Matrix\n",
-      "[[930   0]\n",
-      " [ 52 103]]\n",
+      "[[894   0]\n",
+      " [ 53 103]]\n",
       "Validation Confusion Matrix\n",
-      "[[926   2]\n",
-      " [ 45  98]]\n",
+      "[[929   3]\n",
+      " [ 56 102]]\n",
       "Test Confusion Matrix\n",
-      "[[958   4]\n",
-      " [ 58 103]]\n"
+      "[[992   2]\n",
+      " [ 45 100]]\n"
      ]
     }
    ],
@@ -417,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -428,7 +465,7 @@
        "['ad_classifier.pkl']"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
