Updated model and code

--- a/ML Model.ipynb
+++ b/ML Model.ipynb
@@ -126,7 +126,251 @@
     "            df1[col] = df1[col].fillna(0)\n",
     "        else:\n",
     "            meanval = df1.ix[df1[col].notnull() & trainfilt, col].mean()\n",
-    "            df1[col] = df1[col].fillna(meanval)"
+    "            df1[col] = df1[col].fillna(meanval)\n",
+    "\n",
+    "meanvals = df1[trainfilt].describe()\n",
+    "meanvals.to_csv('./inputmeanvalues.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "meanvals.to_csv('./inputmeanvalues.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "meanvals = pd.read_csv('./inputmeanvalues.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "      <th>aratio</th>\n",
+       "      <th>local</th>\n",
+       "      <th>url*images+buttons</th>\n",
+       "      <th>url*likesbooks.com</th>\n",
+       "      <th>url*www.slake.com</th>\n",
+       "      <th>url*hydrogeologist</th>\n",
+       "      <th>url*oso</th>\n",
+       "      <th>url*media</th>\n",
+       "      <th>...</th>\n",
+       "      <th>caption*ofmissing</th>\n",
+       "      <th>caption*homemissing</th>\n",
+       "      <th>caption*mymissing</th>\n",
+       "      <th>caption*yourmissing</th>\n",
+       "      <th>caption*inmissing</th>\n",
+       "      <th>caption*bytesmissing</th>\n",
+       "      <th>caption*heremissing</th>\n",
+       "      <th>caption*clickmissing</th>\n",
+       "      <th>caption*formissing</th>\n",
+       "      <th>caption*youmissing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>1074.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>65.320051</td>\n",
+       "      <td>155.861716</td>\n",
+       "      <td>3.922461</td>\n",
+       "      <td>0.772812</td>\n",
+       "      <td>0.006518</td>\n",
+       "      <td>0.007449</td>\n",
+       "      <td>0.004655</td>\n",
+       "      <td>0.002793</td>\n",
+       "      <td>0.004655</td>\n",
+       "      <td>0.012104</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>45.197272</td>\n",
+       "      <td>108.099162</td>\n",
+       "      <td>5.010114</td>\n",
+       "      <td>0.419210</td>\n",
+       "      <td>0.080506</td>\n",
+       "      <td>0.086024</td>\n",
+       "      <td>0.068104</td>\n",
+       "      <td>0.052802</td>\n",
+       "      <td>0.068104</td>\n",
+       "      <td>0.109403</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.214200</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 3116 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            height        width       aratio        local  url*images+buttons  \\\n",
+       "count  1074.000000  1074.000000  1074.000000  1074.000000         1074.000000   \n",
+       "mean     65.320051   155.861716     3.922461     0.772812            0.006518   \n",
+       "std      45.197272   108.099162     5.010114     0.419210            0.080506   \n",
+       "min      10.000000    10.000000     0.214200     0.000000            0.000000   \n",
+       "25%      33.000000    94.000000     1.250000     1.000000            0.000000   \n",
+       "\n",
+       "       url*likesbooks.com  url*www.slake.com  url*hydrogeologist      url*oso  \\\n",
+       "count         1074.000000        1074.000000         1074.000000  1074.000000   \n",
+       "mean             0.007449           0.004655            0.002793     0.004655   \n",
+       "std              0.086024           0.068104            0.052802     0.068104   \n",
+       "min              0.000000           0.000000            0.000000     0.000000   \n",
+       "25%              0.000000           0.000000            0.000000     0.000000   \n",
+       "\n",
+       "         url*media         ...          caption*ofmissing  \\\n",
+       "count  1074.000000         ...                       1074   \n",
+       "mean      0.012104         ...                          0   \n",
+       "std       0.109403         ...                          0   \n",
+       "min       0.000000         ...                          0   \n",
+       "25%       0.000000         ...                          0   \n",
+       "\n",
+       "       caption*homemissing  caption*mymissing  caption*yourmissing  \\\n",
+       "count                 1074               1074                 1074   \n",
+       "mean                     0                  0                    0   \n",
+       "std                      0                  0                    0   \n",
+       "min                      0                  0                    0   \n",
+       "25%                      0                  0                    0   \n",
+       "\n",
+       "       caption*inmissing  caption*bytesmissing  caption*heremissing  \\\n",
+       "count               1074                  1074                 1074   \n",
+       "mean                   0                     0                    0   \n",
+       "std                    0                     0                    0   \n",
+       "min                    0                     0                    0   \n",
+       "25%                    0                     0                    0   \n",
+       "\n",
+       "       caption*clickmissing  caption*formissing  caption*youmissing  \n",
+       "count                  1074                1074                1074  \n",
+       "mean                      0                   0                   0  \n",
+       "std                       0                   0                   0  \n",
+       "min                       0                   0                   0  \n",
+       "25%                       0                   0                   0  \n",
+       "\n",
+       "[5 rows x 3116 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meanvals.head()"
    ]
   },
   {
@@ -241,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +496,7 @@
        "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -405,9 +649,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Naive Bayes AUC = 0.968006\n",
-      "Valid Naive Bayes AUC = 0.943938\n",
-      "Test Naive Bayes AUC = 0.949292\n"
+      "Train Naive Bayes AUC = 0.954917\n",
+      "Valid Naive Bayes AUC = 0.961046\n",
+      "Test Naive Bayes AUC = 0.954096\n"
      ]
     }
    ],
